assets/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
}

  body {
    font-size: 100%;
    background: linear-gradient( to bottom left, var(--ColorNumberOne) 16.62%,  var(--ColorNumberTwo)  85.61%);
    color: var(--ColorNumberThree);
    font-family: 'Roboto', sans-serif;
}

.container{
    display: flex;
    flex-direction: column;
    height: 100vh;
    width: 100vw;
}


                /*---------COLORS OF THE PAGE---------*/

:root{
    --ColorNumberOne: #08B2F5;
    --ColorNumberTwo: #0C58E5;
    --ColorNumberThree:#F8F9FA;
    --ColorNumberFour: #07C8F9;
    --ColorNumberFive: #212529;
    --ColorNumberSix: #F8F9FA;
    --ColorNumberSeven: #0000ff;
}

.dark-theme{
    --ColorNumberOne: #00288b;
    --ColorNumberTwo: #000d2e;
    --ColorNumberThree:#F8F9FA;
    --ColorNumberFour: #002788;
    --ColorNumberFive: #171a1d;
    --ColorNumberSix: #F8F9FA;
    --ColorNumberSeven: #495057;
}


                /* --------INÍCIO HEADER--------  */

  .head{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    padding: 24px;
    font-size: 20px;
}

.head-menu{
    display: flex;
    gap: 32px;
}


.head-menu-item{
    color: var(--ColorNumberThree);
    font-size: 100%;
    font-family:'Roboto', sans-serif;
    border: none;
    border-radius: 16px;
    height: 40px;
    padding: 10px;
    background-color: var(--ColorNumberFive);    
    transition-property: all;
    transition-duration: 250ms;
    transition-delay: 50ms;
    transition-timing-function:ease-in;
}

.head-menu-item:hover{
    color: var(--ColorNumberSix) ;
    background-color: var(--ColorNumberSeven);
    padding-left: 20px;
    padding-right: 20px;
    border-radius: 25px;
}

#icon{
    width: 30px;
    cursor: pointer;
}


                /* --------INÍCIO MAIN--------*/


.content{
    margin-bottom: 48px;
    display: flex;
    flex-direction: column;
    align-items: space-around;
    justify-content: center;
    height: 1000px;
}
                
.principal{
    display: flex;
    flex-direction: row;
    justify-content:space-around;
    align-items: center;
}


img{
    width: 420px;
}

.principal-text{
    display: flex;
    flex-direction: column;
    gap: 32px;
    max-width: 900px;
}

.principal-text-title{
    display: flex;
    flex-direction: row;
    justify-content: center;
    font-size: 65px;
    font-weight: 400;
}

.principal-text-paragraph{
    display: flex;
    font-weight: 300;
    font-size: 26px;
}



                /* --------INÍCIO FOOTER--------*/

.rodape{
    font-size: 20px;
    display: flex;
    flex-direction: row;
    align-items: flex-end;
    justify-content: center;
    padding-top: 24px;
    padding-bottom: 24px;

}

.rodape-list{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    list-style: none;
    gap: 10px;
}


.rodape-list-item{
    display: flex;
    flex-direction: row;
    align-content: center;
    justify-content: space-around; 

    color: var(--ColorNumberThree);
    font-size: 100%; 

    border: none;
    border-radius: 20px;
    padding-left: 5px;
    padding-right: 5px; 
    background-color: var(--ColorNumberFive);

    transition-property: all;
    transition-duration: 250ms;
    transition-delay: 50ms;
    transition-timing-function:ease-in-out ;
}

.rodape-list-item:hover{
    color: var(--ColorNumberThree);
    background-color: var(--ColorNumberSeven);
    height: 30px;
}

